# rocketmq-client-cpp

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  WORKSPACE  bazel-rocketmq-client-cpp  build.compatible.sh  build.sh  deploy.sh  format.sh  onekeybuild.sh  package_rocketmq.mri  win32_build.bat
example/: ArgHelper.cpp  ArgHelper.h  AsyncProducer.cpp  AsyncPushConsumer.cpp  BUILD.bazel  BatchProducer.cpp  CAsyncProducer.c  CBatchProducer.c  CMakeLists.txt  COrderlyAsyncProducer.c  MQAdmin.c  Makefile  OrderProducer.cpp  OrderlyProducer.cpp  OrderlyPushConsumer.cpp  Producer.c  PullConsumeMessage.c  PullConsumeMessage.c.bak  PullConsumer.cpp  PushConsumeMessage.c  PushConsumer.cpp  PushConsumerOrderly.c  README.md  RequestReply.cpp  SendDelayMsg.cpp  SyncProducer.cpp  TransactionProducer.cpp  common.h
example/rocketmq/: BUILD.bazel  BenchmarkPushConsumer.cpp  CMakeLists.txt  ExampleAsyncProducer.cpp  ExampleBroadcastPushConsumer.cpp  ExampleFifoProducer.cpp  ExampleFifoPushConsumer.cpp  ExampleProducer.cpp  ExampleProducerRemoting.cpp  ExamplePullConsumer.cpp  ExamplePushConsumer.cpp  ExampleSimpleConsumer.cpp  ExampleTransactionProducer.cpp  PushConsumerWithCustomExecutor.cpp  PushConsumerWithThrottle.cpp  SqlConsumer.cpp  SqlProducer.cpp
examples/: BUILD.bazel  BenchmarkPushConsumer.cpp  CMakeLists.txt  ExampleAsyncProducer.cpp  ExampleFifoProducer.cpp  ExampleProducer.cpp  ExamplePushConsumer.cpp  ExampleSimpleConsumer.cpp  SqlProducer.cpp
examples/ons/: ExampleAsyncProducer.cpp  ExampleBroadcastingPushConsumer.cpp  ExampleBroadcastingPushConsumerWithOffsetStore.cpp  ExampleOnewayProducer.cpp  ExampleOrderProducer.cpp  ExampleOrderPushConsumer.cpp  ExampleProducer.cpp  ExamplePushConsumer.cpp  ExamplePushConsumerWithThrottle.cpp  ExampleTimedMessage.cpp  ExampleTransactionProducer.cpp
examples/rocketmq/: ExampleAsyncProducer.cpp  ExampleBroadcastPushConsumer.cpp  ExampleProducer.cpp  ExamplePullConsumer.cpp  ExamplePushConsumer.cpp  PushConsumerWithCustomExecutor.cpp
project/: CMakeLists.txt  Makefile
proto/: BUILD.bazel  CMakeLists.txt
proto/apache/rocketmq/v1/: admin.proto  definition.proto  service.proto
proto/apache/rocketmq/v2/: admin.proto  definition.proto  service.proto
src/main/cpp/: CMakeLists.txt
src/main/cpp/admin/: AdminClient.cpp  AdminFacade.cpp  AdminServerImpl.cpp  AdminServiceImpl.cpp  BUILD.bazel  CMakeLists.txt
src/main/cpp/base/: BUILD.bazel  CMakeLists.txt  Configuration.cpp  ConfigurationDefaults.cpp  CredentialsProvider.cpp  ErrorCategory.cpp  ErrorCode.cpp  FilterExpression.cpp  GHttpClient.cpp  HostInfo.cpp  HttpClient.cpp  HttpClientImpl.cpp  MQMessage.cpp  MQMessageExt.cpp  Message.cpp  MessageAccessor.cpp  MessageExt.cpp  MessageSystemFlag.cpp  Metadata.cpp  MetadataConstants.cpp  MixAll.cpp  PermissionHelper.cpp  Protocol.cpp  RateLimiter.cpp  RequestIdGenerator.cpp  ThreadPoolImpl.cpp  TopAddressing.cpp  Tracing.cpp  UniqueIdGenerator.cpp  UtilAll.cpp
src/main/cpp/client/: BUILD.bazel  CMakeLists.txt  ClientApi.cpp  ClientConfig.cpp  ClientConfigImpl.cpp  ClientInstance.cpp  ClientManager.cpp  ClientManagerFactory.cpp  ClientManagerImpl.cpp  LogInterceptor.cpp  LogInterceptorFactory.cpp  ReceiveMessageStreamReader.cpp  RpcClientImpl.cpp  RpcClientRemoting.cpp  SessionImpl.cpp  Signature.cpp  TelemetryBidiReactor.cpp  TlsHelper.cpp  TopicAssignmentInfo.cpp  TopicPublishInfo.cpp  TracingUtility.cpp
src/main/cpp/concurrent/: BUILD.bazel  CMakeLists.txt  CountdownLatch.cpp
src/main/cpp/log/: BUILD.bazel  CMakeLists.txt  Logger.cpp  LoggerImpl.cpp
src/main/cpp/ons/: AccessPoint.cpp  CMakeLists.txt  ConsumerImpl.cpp  FAQ.cpp  InstanceUtil.cpp  Message.cpp  MessageListenerWrapper.cpp  MessageQueueONS.cpp  ONSClientAbstract.cpp  ONSClientException.cpp  ONSConsumerAbstract.cpp  ONSEnvironmentVariableFactoryProperty.cpp  ONSFactory.cpp  ONSFactoryInstance.cpp  ONSFactoryProperty.cpp  ONSMessageQueueSelector.cpp  ONSSendCallback.cpp  ONSUtil.cpp  OrderConsumerImpl.cpp  OrderProducerImpl.cpp  ProducerImpl.cpp  SendCallbackONSWrapper.cpp  SendResultONS.cpp  TransactionProducerImpl.cpp
src/main/cpp/remoting/: AckMessageRequestHeader.cpp  BUILD.bazel  BrokerData.cpp  CommandCustomHeader.cpp  ConsumerData.cpp  HeartbeatData.cpp  MessageVersion.cpp  PopMessageRequestHeader.cpp  PopMessageResponseHeader.cpp  PullMessageRequestHeader.cpp  PullMessageResponseHeader.cpp  QueryConsumerOffsetRequestHeader.cpp  QueryConsumerOffsetResponseHeader.cpp  QueryRouteRequestHeader.cpp  QueueData.cpp  RemotingCommand.cpp  RemotingConstants.cpp  RemotingHelper.cpp  (+5 more)
test/: CMakeLists.txt
test/make/: Makefile
test/src/: BatchMessageTest.cpp  MQClientAPIImpTest.cpp  MQClientFactoryTest.cpp  MQClientManagerTest.cpp  MQDecoderTest.cpp  Producer.cc  StringIdMakerTest.cpp  UrlTest.cpp  clang_format_test.cc
test/src/client/: DefaultMQAdminTest.cpp
test/src/common/: BigEndianTest.cpp  ClientRPCHookTest.cpp  MQVersionTest.cpp  MemoryBlockTest.cpp  MemoryOutputStreamTest.cpp  NameSpaceUtilTest.cpp  NamesrvConfigTest.cpp  PermNameTest.cpp  PermNametTest.cpp  PullSysFlagTest.cpp  TopicConfigTest.cpp  UrlTest.cpp  UtilAllTest.cpp  ValidatorsTest.cpp  VirtualEnvUtilTest.cpp  big_endianTest.cpp
test/src/consumer/: DefaultMQPushConsumerImplTest.cpp
test/src/message/: MQDecoderTest.cpp  MQMessageExtTest.cpp  MQMessageIdTest.cpp  MQMessageQueueTest.cpp  MQMessageTest.cpp  MessageBatchTest.cpp  MessageClientIDSetterTest.cpp  MessageDecoderTest.cpp  MessageIdTest.cpp  StringIdMakerTest.cpp
test/src/producer/: DefaultMQProducerImplTest.cpp  TopicPublishInfoTest.cpp
test/src/protocol/: CommandHeaderTest.cpp  ConsumerRunningInfoTest.cpp  HeartbeatDataTest.cpp  KVTableTest.cpp  LockBatchBodyTest.cpp  MessageQueueTest.cpp  ProcessQueueInfoTest.cpp  RemotingCommandTest.cpp  TopicRouteDataTest.cpp
test/src/trace/: TraceBeanTest.cpp  TraceUtilTest.cpp
test/src/transport/: ClientRemotingProcessorTest.cpp  ResponseFutureTest.cpp  SocketUtilTest.cpp
(+987 files in other folders)
